feat: add plugin to resolve relative paths from static and dynamic imports

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.dynamicframework.dev/assets/latest/ui-react/css/bootstrap-icons.min.css">
 
+  <script>
+    window['resourceBasePath-{{widget.wid}}'] = 'http://localhost:3000/';
+  </script>
+
   <title>dynamic-vite-base-template</title>
 </head>
 
