feat: update font and title in index.html; standardize icon casing in components

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.dynamicframework.dev/assets/latest/ui-react/css/bootstrap-icons.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>dynamic-vite-base-template</title>
+  <title>Modyo widget</title>
 </head>
 
 <body>
